force-app/main/default/objects/QRMCA_Round_Robin__c/QRMCA_Round_Robin__c.object-meta.xml
<CustomObject>
    <label>QRMCA Round Robin</label>
    <nameField>
        <displayFormat>QR-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QRMCA Round Robin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>