force-app/main/default/objects/QRMCA_Round_Robin__c/fields/Add_In_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Add_In_Round_Robin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add In Round Robin?</label>
    <type>Checkbox</type>
</CustomField>