force-app/main/default/objects/QRMCA_Round_Robin__c/fields/Last_assigned_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_assigned_Time__c</fullName>
    <label>Last assigned Time</label>
    <type>DateTime</type>
</CustomField>