force-app/main/default/objects/QRMCA_Round_Robin__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Edata</fullName>
            </value>
            <value>
                <fullName>Group A (Ian)</fullName>
            </value>
            <value>
                <fullName>Group B (Roger)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>