force-app/main/default/objects/QRMCA_Round_Robin__c/fields/USER__c.field-meta.xml
<CustomField>
    <fullName>USER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>USER</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QRMCA_Round_Robin</relationshipName>
    <type>Lookup</type>
</CustomField>