force-app/main/default/objects/QRMCA_Round_Robin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>USER__c</columns>
    <columns>Add_In_Round_Robin__c</columns>
    <columns>Short_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Regular</value>
    </filters>
    <label>Regular</label>
</ListView>