force-app/main/default/objects/QRMCA_Round_Robin__c/listViews/EDATA.listView-meta.xml
<ListView>
    <fullName>EDATA</fullName>
    <columns>NAME</columns>
    <columns>USER__c</columns>
    <columns>Add_In_Round_Robin__c</columns>
    <columns>Short_Reason__c</columns>
    <columns>Last_assigned_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Edata</value>
    </filters>
    <label>EDATA</label>
</ListView>